# CashFlow

./: .dockerignore  .gitattributes  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
CashFlow/: .env.example  manage.py
CashFlow/CashFlow/: mixins.py  settings.py  urls.py
CashFlow/auth_app/: forms.py  urls.py  views.py
CashFlow/auth_app/templates/auth_app/: login.html  registration.html
CashFlow/dds_app/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
CashFlow/dds_app/migrations/: 0001_initial.py  0002_alter_transaction_created_date.py  0003_alter_subcategory_options.py  0004_alter_category_name_alter_operationtype_name_and_more.py  0005_alter_transaction_category_and_more.py
CashFlow/dds_app/static/dds_app/js/: chart_script.js  filters_form.js  transactions_admin.js
CashFlow/dds_app/static/dds_app/style/: main_page_style.css
CashFlow/dds_app/templates/dds_app/: add_transaction_modal_form.html  main.html  managing_directories.html  update_transaction_modal_form.html  welcome_page.html
CashFlow/dds_app/templates/dds_app/modals/: add_category_modal.html  add_status_modal.html  add_subcategory_modal.html  add_transaction_modal.html  add_type_modal.html  delete_category_modal.html  delete_status_modal.html  delete_subcategory_modal.html  delete_transaction_modal.html  delete_type_modal.html  update_category_modal.html  update_status_modal.html  update_subcategory_modal.html  update_transaction_modal.html  update_type_modal.html
CashFlow/templates/: base.html
CashFlow/templates/inc/: _header.html
